--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
+/* App.css */
 .App {
-  text-align: center;
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 250px 1fr;
+    height: 100vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  
+.content-wrapper {
+    display: contents; /* This allows direct children to participate in the parent's grid */
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  
+.sidebar {
+    grid-row: 1; /* Place in the second row */
+    grid-column: 1; /* Place in the first column */
+    background-color: #f0f0f0;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+}
+  
+.main-content {
+    grid-row: 1; /* Place in the second row */
+    grid-column: 1; /* Place in the second column */
+    padding: 10px;
+    background-color: #fff;
+    overflow-y: auto;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+  
+  
