--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,23 +1,22 @@
 /* Header.css */
 .header-container {
-  /* display: flex; */
+  display: flex;
   align-items: center;
   justify-content: space-between; /* Distribute space between items */
-  /* padding: 5px; */
   width: 100%;
-  height: 6em;
+  height: 4em;
   background-color: rgb(30, 129, 176);
+  border: none; /* Ensure there is no border */
+  margin: 0; /* Ensure there is no margin */
 }
 
 .csuf-logo {
-  /* padding: 5px; */
-  flex: 0.2;
-  width: 100px; /* Adjust width as needed */
+  width: 120px; /* Adjust width as needed */
   height: auto; /* Maintain aspect ratio */
 }
 
 .nsf-logo {
-  width: 100px; /* Adjust width as needed */
+  width: 60px; /* Adjust width as needed */
   height: auto; /* Maintain aspect ratio */
 }
 
@@ -27,3 +26,6 @@
   color: white;
   margin-right: auto; /* Pushes the title to the left */
 }
+
+
+
