--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -30,13 +30,14 @@
 .top_section {
   display: flex;
   align-items: center;
-  height: 70px;
+  height: 12px;
   padding: 18px;
   background-color: #084b8a; /* Background color for the top section */
 }
 
 /* Logo styling */
 .logo {
+
   font-size: 20px;
   font-weight: bold;
   margin-left: 40px;
@@ -45,6 +46,7 @@
 
 /* Bars icon styling */
 .bars {
+  margin-top: -10px;
   font-size: 65px;
   cursor: pointer;
   color: #ffffff; /* Bars icon color */
