--- a/src/pages/RecommenderPage/RecommenderPage.css
+++ b/src/pages/RecommenderPage/RecommenderPage.css
@@ -1,5 +1,7 @@
-* {
+.main-container{
   padding: 0;
-  margin: 0;
+  margin-left: -15px;
+  width: 103.5%;
+  margin-top: -30px;
   box-sizing: border-box;
 }
