--- a/src/pages/FindGraduateSchools/FindGraduateSchools.css
+++ b/src/pages/FindGraduateSchools/FindGraduateSchools.css
@@ -2,14 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 10px;
-    margin-top: -5px;
+    padding: 0px;
   }
   
  .dropdown-list {
     display: flex;
-    gap: 10px; /* Adjust space between dropdowns as needed */
-    margin-bottom: 20px; /* Add space below the dropdowns */
+    gap: 10px; 
+    margin-bottom: 20px; 
   }
  
   .started-degree-tiles {
@@ -20,16 +19,16 @@
   .changed-degree-tiles-container {
     margin-top: -10px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Four equal columns */
+    grid-template-columns: repeat(4, 1fr);
   }
   
   .degree-general-tiles {
     margin-top: 0px;
-    grid-column: 1 / 2; /* Occupies the first column */
-    padding: 1rem; /* Space within the column */
+    grid-column: 1 / 2; 
+    padding: 1rem; 
   }
   
   .degree-additional-tiles {
-    grid-column: 2 / 4; /* Occupies the second to fourth columns */
+    grid-column: 2 / 4;
   }
   
