--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,47 +1,71 @@
-.card-link {
-  text-decoration: none;
-  color: inherit;
-}
-
 .card {
+  position: relative;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  padding: 16px;
+  width:240px;
+  height:260px;
+  margin: 16px;
   display: flex;
-  width: 300px; /* Fixed width */
-  height: 260px; /* Fixed height */
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 20px;
-  text-align: center;
-  background-color: #fff;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s, box-shadow 0.3s;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.card-img {
-  width: 100%;
-  height: auto;
-  border-radius: 8px;
-  margin-bottom: 16px;
-}
-
-.card-title,
-.card-subtitle {
-  margin: 8px 0;
+.card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
 
 .card-title {
   font-size: 1.5rem;
   color: #333;
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.card-link {
+  display: block;
+  margin: 0 auto 16px auto; 
+  width: 50%; 
+}
+
+.card-img {
+  width: 50%;
+  height: auto;
+  border-radius: 8px;
 }
 
 .card-subtitle {
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: #666;
+  text-align: center;
+  margin-bottom: 24px; 
 }
 
-.card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+.card-bookmark-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  position:absolute;
+  top: 240px; 
+  right: 10px; 
+  font-size: 24px;
+  z-index: 2; 
 }
+
+.card-bookmark-icon {
+  font-size: 24px; 
+  color: #084b8a; 
+}
+
+.card-bookmark-icon.blue {
+  color: #084b8a;
+}
+
+.card-bookmark-icon.white {
+  color: #ccc
+}
+
