--- a/src/components/Footer/FooterWithTimer.css
+++ b/src/components/Footer/FooterWithTimer.css
@@ -1,4 +1,3 @@
-/* FooterWithTimer.css */
 
 .footer-with-timer-container {
   position: fixed;
@@ -8,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 15px; /* Adjust padding as needed */
+  padding: 5px 15px;
   border-top: 1px solid #ccc;
   background-color: #f1f1f1;
   z-index: 1000;
@@ -18,7 +17,7 @@
   background-color: #084b8a !important;
   color: white !important; 
   border: none;
-  padding: 8px 15px; /* Adjust padding for button size */
+  padding: 8px 15px;
   border-radius: 5px;
   cursor: pointer;
   font-size: 14px;
@@ -27,12 +26,12 @@
 
 .footer-timer-button:disabled {
 
-  opacity: 0.7; /* Slightly fade the button to indicate it's disabled */
-  cursor: not-allowed; /* Change cursor to indicate disabled state */
+  opacity: 0.7; 
+  cursor: not-allowed; 
 }
 
 .footer-timer-button:hover:not(:disabled) {
-  background-color: #063f6c; /* Darker blue on hover */
+  background-color: #063f6c;
 }
 
 .footer-timer {
@@ -53,7 +52,7 @@
 }
 
 .recommendations-button {
-  background-color: #28a745; /* Green color for the recommendations button */
+  background-color: #28a745; 
   color: white;
   border-radius: 5px;
   padding: 5px 10px;
@@ -61,5 +60,5 @@
 }
 
 .recommendations-button:hover {
-  background-color: #218838; /* Darker green on hover */
+  background-color: #218838;
 }
