--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 
-/* Resetting default padding, margin, and box-sizing for all elements */
 
-
-/* Styling for the header */
 header {
+  margin-top: -10px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -12,7 +10,7 @@ header {
   padding: 0px 0px;
 }
 
-/* Styling for the site title */
+
 .site-title {
   font-size: 24px;
   font-weight: bold;
@@ -24,23 +22,23 @@ header {
   font-family: 'Roboto', sans-serif; 
 }
 
-/* Container to align the logos to the right */
+
 .logo-container {
   display: flex;
   align-items: center;
-  margin-left: auto; /* Push the logo container to the right */
+  margin-left: auto; 
 }
 
-/* Common styling for both logos */
+
 .csuf-logo,
 .nsf-logo {
-  height: 50px; /* Adjust the height as needed */
-  margin: 0; /* Remove margin around the logos */
-  padding: 0; /* Remove padding around the logos */
-  display: block; /* Ensure logos are block-level elements */
-  box-sizing: border-box; /* Ensure padding and border are included in element's total width and height */
+  height: 50px; 
+  margin: 0;
+  padding: 0;
+  display: block; 
+  box-sizing: border-box; 
 }
 
 .csuf-logo {
-  margin-right: 10px; /* Add some space between the two logos */
+  margin-right: 10px; 
 }
