--- a/src/components/Subhead/Subhead.css
+++ b/src/components/Subhead/Subhead.css
@@ -1,42 +1,35 @@
 .subhead-container {
   background-color: white;
-  padding-top: 10px;
-}
-
-.subhead {
+  width:100%;
   display: flex;
-  justify-content: space-around;
-  margin-bottom: 10px;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0px 0px;
   border-bottom: 2px solid #ddd;
 }
 
 .subhead-option {
-  text-decoration: none; /* Remove underline */
+  text-decoration: none; 
   padding: 10px 20px;
   font-size: 16px;
-  font-family: "Roboto", sans-serif; /* Apply the new font */
+  font-family: "Roboto", sans-serif; 
   color: #555;
   transition: background-color 0.3s ease, color 0.3s ease;
   border: 1px solid transparent;
   border-bottom: none;
   border-radius: 4px 4px 0 0;
+  white-space: nowrap;
+  display: inline-block;
 }
 
 .subhead-option:hover {
-  background-color: #f0f0f0; /* Background color on hover */
+  background-color: #f0f0f0; 
 }
 
 .subhead-option.active {
   font-weight: bold;
-  color: #007bff; /* Active color */
-  background-color: #e6f0ff; /* Background color for active tab */
+  color: #007bff; 
+  background-color: #e6f0ff; 
   border: 1px solid #ddd;
-  border-bottom: 2px solid white; /* To blend with the container background */
-}
-
-.subhead-content {
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  background-color: #f9f9f9;
+  border-bottom: 2px solid white;
 }
