--- a/src/pages/GetResearchExperience/GetResearchExperience.css
+++ b/src/pages/GetResearchExperience/GetResearchExperience.css
@@ -1,39 +1,39 @@
 
 .GetResearchExperience {
-  padding: 20px; /* Adjust padding as needed */
-  background-color: #f9f9f9; /* Light background color for contrast */
-  border-radius: 8px; /* Rounded corners for a smooth look */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Slight shadow for depth */
-  font-family: 'Arial', sans-serif; /* Change font family */
+  padding: 20px; 
+  background-color: #f9f9f9; 
+  border-radius: 8px; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  font-family: 'Arial', sans-serif; 
 }
 
 .markContainer {
-  display: flex; /* Enables flexbox on the container */
-  justify-content: center; /* Center the child horizontally */
-  align-items: center; /* Center the child vertically */
-  margin-bottom: 20px; /* Add some space below the mark container */
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  margin-bottom: 20px; 
 }
 
 .facultyContainer, .otherContainer {
-  margin-bottom: 20px; /* Space between sections */
-  padding: 15px; /* Padding around the content */
-  background-color: #fff; /* White background for the content area */
-  border-radius: 4px; /* Rounded corners for the content container */
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for the content container */
+  margin-bottom: 20px; 
+  padding: 15px; 
+  background-color: #fff; 
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
 }
 
 p {
-  font-size: 18px; /* Adjust font size as needed */
-  line-height: 1.6; /* Line height for readability */
-  color: #333; /* Dark text color for good contrast */
-  margin-bottom: 15px; /* Space between paragraph and TileList */
-  font-family: 'Georgia', serif; /* Change font family for better readability */
+  font-size: 18px;
+  line-height: 1.6; 
+  color: #333; 
+  margin-bottom: 15px;
+  font-family: 'Georgia', serif; 
 }
 
 h2 {
-  font-size: 22px; /* Larger font size for headers */
-  color: #007bff; /* Different color for headers */
-  margin-bottom: 10px; /* Space below headers */
+  font-size: 22px; 
+  color: #007bff;
+  margin-bottom: 10px; 
 }
 .title {
   text-align: center;
