--- a/src/pages/RecommenderPage/RecommenderPage.css
+++ b/src/pages/RecommenderPage/RecommenderPage.css
@@ -1,7 +1,16 @@
-.main-container{
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  width: 100vw; 
+  height: 100vh; 
+  margin: 0;
   padding: 0;
-  margin-left: -15px;
-  width: 103.5%;
-  margin-top: -30px;
   box-sizing: border-box;
 }
+
+.content {
+  flex: 1; 
+  overflow-y: auto; 
+}
+
