--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,7 +1,7 @@
 .search-input {
   width: 300px;
   padding: 10px 15px;
-  border: 1px solid #ddd;
+  border: 1px solid #7c7a7adf;
   border-radius: 8px;
   font-size: 1rem;
   outline: none;
@@ -9,6 +9,7 @@
 }
 
 .search-input:focus {
-  box-shadow: 0 0 8px rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 8px rgba(0, 123, 255, 0.189);
   border-color: #007bff;
 }
+
