--- a/src/pages/RecommenderPage/RecommenderPage.css
+++ b/src/pages/RecommenderPage/RecommenderPage.css
@@ -1,16 +1,9 @@
 
-.main-container {
-  display: flex;
-  flex-direction: column;
-  width: 100vw; 
-  height: 100vh; 
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+
 
 .content {
   flex: 1; 
   overflow-y: auto; 
+  margin-top: -100px;
 }
 
